<resources>
    <string name="app_name">Notes App</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="simpan">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="date">Tanggal</string>

    <string name="input">Masukkan Bahasa</string>
    <string name="input_text">Masukkan Teks</string>
    <string name="output">Keluaran Bahasa</string>
    <string name="output_text">Hasil Terjemahan</string>
    <string name="translate_label">Penerjemah Deskripsi</string>

    <string name="from">Dari</string>
    <string name="to">Ke</string>
    <string name="translate">terjemahkan</string>
    <string name="ask">Cara penggunaan aplikasi</string>
    <string name="howTo">Cara Menggunakan Aplikasi</string>
    <string name="fillHowTo">1. Anda dapat menambahkan data menggunakan Tombol (+) yang berada di sudut kanan bawah pada halaman utama. \n
        \n2. Anda dapat Merubah data dengan menekan catatan yang ingin dirubah pada halaman detail catatan lalu tekan tombol simpan kembali. \n
        \n3. Anda dapat Menghapus data dengan menekan catatan lalu menekan ikon tempat sampah pada halaman detail catatan. \n
        \n4. Anda dapat menggunakan fitur Voice to Text dengan menekan tombol mikrofon pada halaman tambah data. \n
        \n5. Anda dapat menggunakan fitur Menyalin Teks dengan menekan tombol salin pada sudut kanan di bawah teks deskripsi. \n
        \n6. Anda dapat menggunakan fitur penerjemah dengan menekan tombol terjemahan di sudut kanan bawah.</string>
    <string name="Edit">Merubah Catatan</string>

</resources>